deployments/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: staging
  name: beta-service
  labels:
    app: beta-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beta-service
  template:
    metadata:
      labels:
        app: beta-service
    spec:
      imagePullSecrets:
        - name: beta-service-registry-secrets
      containers:
        - name: beta-service-container
          image: <IMAGE>
          ports:
            - name: app-port
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /_health/check
              port: 8000
          readinessProbe:
            httpGet:
              path: /_health/ready
              port: 8000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
